Add fetch-depth option to checkout step and ensure newline at end of flow metadata file

--- a/.github/workflows/documentation_flow.yml
+++ b/.github/workflows/documentation_flow.yml
@@ -21,6 +21,10 @@ jobs:
   update-documentation-flow:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0  # Full history for diff
+
       - name: Initialise Documentation
         id: context
         uses: ./.github/actions/initialise-docs
