Enhance prompt generation action: add configuration output for documentation.json

--- a/.github/actions/gen-prompt/action.yml
+++ b/.github/actions/gen-prompt/action.yml
@@ -21,6 +21,9 @@ runs:
       id: p1
       shell: bash
       run: |
+        echo "Configuration:"
+        cat documentation.json
+
         echo "Generating prompt for flow documentation update..."
 
         previous_prompt=""
