Fix output parameter reference in initialise-docs action and ensure newline at end of MoveData_Donation_Account_Key flow metadata file

--- a/.github/actions/initialise-docs/action.yml
+++ b/.github/actions/initialise-docs/action.yml
@@ -15,7 +15,7 @@ inputs:
 outputs:
   job-key:
     description: 'Job Key'
-    value: ${{ steps.output-params.outputs.random-number }}
+    value: ${{ steps.output-params.outputs.job-key }}
   modified-files:
     description: 'Modified Files'
     value: ${{ steps.output-params.outputs.modified-files }}
